--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Feel free to connect with me through any of the platforms below.
 
   <div class="instagram-gallery">
     <a href="https://www.instagram.com/p/DODmvyNkwMt/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
-      <img src="assets/instagram/insta3.PNG" alt="Instagram post 1">
+      <img src="assets/instagram/insta3.PNG" alt="Instagram post 1" class="insta-card">
     </a>
     <a href="https://www.instagram.com/p/DPHIxEqEz4-/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
       <img src="assets/instagram/insta2.PNG" alt="Instagram post 2">
